<resources>
    <string name="app_name">My Medicine</string>
    <string name="goto_search_btnstr">Find your problem and your solution</string>
    <string name="goto_profile_btnstr">View and edit your profile</string>
    <string name="back_btn">Go back</string>
    <string name="profile_ttl">Your Profile</string>
    <string name="history_ttl">Your Treatment History</string>
    <string name="treatment_search_ttl">Condition Search</string>
    <string name="dob_lbl">Date Of Birth:</string>
    <string name="gender_lbl">Gender:</string>
    <string name="activitylevel_lbl">How active are you?</string>
    <string name="stresslevel_lbl">How much stress are you under?</string>
    <string name="submit_profile_btn">Submit changes to your profile</string>
    <string name="search_for_conditions">Search for conditions</string>
    <string name="condition_search_input">Condition search input</string>
    <string name="submit_search">Submit search</string>
    <string name="choose_a_letter">Choose a letter</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="select_treatment">Select Treatment</string>
    <string name="cancel">Cancel</string>
    <string name="treatments">Treatments</string>
    <string name="condition">Condition</string>
    <string-array name="gender_options_array">
        <item>Prefer not to answer</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_level_array">
        <item>Prefer not to answer</item>
        <item>Sedentary: little or no exercise</item>
        <item>Light: exercise up to 3 times per week</item>
        <item>Moderate: exercise 4(–, &#8211;)5 times per week</item>
        <item>Active: Daily exercise or intense exercise 3(–, &#8211;)4 times per week</item>
        <item>Very Active: Intense exercise 6(en dash)7 times per week or physical job</item>
    </string-array>
    <string-array name="stress_level_array">
        <item>Prefer not to answer</item>
        <item>No stress</item>
        <item>Slightly stressed</item>
        <item>Moderately stressed</item>
        <item>Very stressed</item>
    </string-array>
    <string name="title_activity_profile_history">ProfileHistoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="title_activity_aaa">aaa</string>
    <string name="submit_changes_to_your_history">Submit treatment reviews</string>
    <string name="review_the_treatments_you_have_used">Review the treatments you have used</string>
    <string name="treatment_no_store"></string>
    <string name="condition_name_store"></string>
    <string name="treatment_name_store"></string>
    <string name="treatment_review_store"></string>
    <string name="treatment_description_dialog_store"></string>
    <string name="treatment_no_dialog_store"></string>
</resources>
