<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/constraintLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ProfileHistoryActivity$ProfileFragment">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginLeft="45dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="45dp"
    android:layout_marginRight="45dp"
    android:text="@string/profile_ttl"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="45dp"
    android:text="@string/dob_lbl"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="10dp"
    android:text="@string/gender_lbl"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dob_picker" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="50dp"
    android:text="@string/activitylevel_lbl"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="132dp"
    android:layout_height="45dp"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="50dp"
    android:text="@string/stresslevel_lbl"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/submit_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit_profile_btn"
        app:layout_constraintBottom_toTopOf="@+id/back_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stress_level_spinner" />

<DatePicker
    android:id="@+id/dob_picker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="30dp"
    android:calendarViewShown="false"
    android:datePickerMode="spinner"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<Spinner
    android:id="@+id/gender_spinner"
    android:layout_width="195dp"
    android:layout_height="55dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dob_picker" />

<Spinner
    android:id="@+id/activity_level_spinner"
    android:layout_width="195dp"
    android:layout_height="55dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

<Spinner
    android:id="@+id/stress_level_spinner"
    android:layout_width="197dp"
    android:layout_height="55dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    android:dropDownWidth="wrap_content"
    android:spinnerMode="dropdown"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_level_spinner" />

</android.support.constraint.ConstraintLayout>